fixed spacing and added stars

--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -1,6 +1,5 @@
 .filtersContainer{
     height: 500px;
-    width: 201px;
     border: 1px solid red;
     margin-left: 1%;
 }
